syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data";
option java_package = "ru.yandex.alice.protos.data";

import "mapreduce/yt/interface/protos/extension.proto";

message TChildAge {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    uint32 Age = 1 [json_name = "age", (NYT.column_name) = "age"];

    // Seconds from the epoch of 1970-01-01T00:00:00Z (UTC)
    int64 EpochSeconds = 2 [json_name = "epoch_seconds", (NYT.column_name) = "epoch_seconds"];
}
